--- a/memory/src/styles/globals.scss
+++ b/memory/src/styles/globals.scss
@@ -12,4 +12,296 @@ $white-off: #fcfcfc; // Off-white
   height: 100vh;
   background-repeat: no-repeat;
   background-image: url("../../public/images/wood.jpg");
+  overflow: hidden !important;
+
+  .memoryHeadline {
+    position: absolute;
+    color: $white-off;
+    font-size: 120px;
+    font-weight: 700;
+    top: 44%;
+    left: 50%;
+    z-index: 10;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 0.5rem;
+    transition: transform 0.5s ease-in-out;
+    &.slideUp {
+      transform: translate(-50%, -50%) translateY(-166px);
+    }
+    .letter-1,
+    .letter-2,
+    .letter-3,
+    .letter-4,
+    .letter-5,
+    .letter-6 {
+      opacity: 0;
+      animation: popUp 0.5s ease forwards;
+    }
+
+    .letter-1 {
+      color: $orange-bright;
+      animation-delay: 1s;
+    }
+    .letter-2 {
+      color: $blue-gray;
+      animation-delay: 1.2s;
+    }
+    .letter-3 {
+      color: $dark-teal;
+      animation-delay: 1.4s;
+    }
+    .letter-4 {
+      color: $deep-green;
+      animation-delay: 1.6s;
+    }
+    .letter-5 {
+      color: $orange-bright;
+      animation-delay: 1.8s;
+    }
+    .letter-6 {
+      color: $sky-blue;
+      animation-delay: 2s;
+    }
+
+    span {
+      display: inline-block;
+      transition: transform 0.3s ease, color 0.3s ease;
+
+      &:hover {
+        transform: scale(1.2);
+        cursor: pointer;
+      }
+    }
+  }
+  .gameParagraph {
+    font-size: 50px;
+    font-weight: 600;
+    position: absolute;
+    left: 50%;
+    top: 56%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    animation: fadeIn 1s ease forwards;
+    animation-delay: 2.2s;
+    color: $deep-green;
+    z-index: 15;
+  }
+  .modal {
+    height: 390px;
+    width: 730px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    position: absolute;
+    top: 57%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    animation: fadeInModal 0.5s ease-in forwards 0.5s;
+  }
+
+  @keyframes fadeInModal {
+    to {
+      opacity: 1; // Fully visible
+    }
+  }
+  @keyframes popUp {
+    0% {
+      opacity: 0;
+      transform: scale(1.1);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+}
+
+#cardComponentGame {
+  border-radius: 15px;
+  position: absolute;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  .card-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+    border-radius: 15px;
+    .card-front {
+      background-image: url(/images/cardImages/flippedCard.png);
+      background-size: cover;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      transform: rotateY(0deg);
+      border-radius: 15px;
+      border: 2px solid black;
+    }
+    .card-back {
+      background-size: cover;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      transform: rotateY(180deg);
+      border-radius: 15px;
+      border: 2px solid black;
+    }
+  }
+}
+.cardComponentFrontPage {
+  background-size: cover;
+  border: 2px solid black;
+  border-radius: 15px;
+  position: absolute;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
+  &.left {
+    transition: transform 2.5s ease-out, opacity 2.5s ease-out !important;
+    transform: translate(-200vw, 0) !important;
+    opacity: 0;
+  }
+
+  &.right {
+    transition: transform 1.5s ease-out, opacity 1.5s ease-out !important;
+
+    transform: translate(200vw, 0) !important;
+    opacity: 0;
+  }
+}
+
+#flippedCard {
+  width: 170px;
+  height: 170px;
+  background-color: #fff; /* White background */
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr); /* 6 columns for rings */
+  grid-gap: 5px;
+  padding: 10px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); /* Adds depth */
+  border: 2px solid black; /* Thin border for styling */
+  position: relative;
+
+  &::before {
+    overflow: hidden;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(
+      circle,
+      white 10%,
+      red 10%,
+      /* Outer red ring */ red 25%,
+      /* Outer red ring */ transparent 25% /* Transparent area after the ring */
+    ); /* Red ring with a white center */
+    background-size: 15px 15px; /* Adjust size and spacing of rings */
+    background-position: center !important;
+
+    position: absolute;
+    inset: 0;
+    z-index: 1;
+    border-radius: 10px;
+    pointer-events: none; /* Prevent interference with clicks */
+  }
+}
+
+#cardOnTop {
+  position: absolute;
+  left: calc(90vw - 75px);
+  top: calc(50vh - 85px);
+  background-size: cover;
+  width: 150px;
+  height: 150px;
+  border-radius: 15px;
+  position: absolute;
+  border: 2px solid black;
+  box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
+  color: white;
+}
+
+// inGame
+#inGame {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-image: url("../../public/images/wood.jpg");
+  overflow: hidden !important;
+  position: relative;
+  .fullscreenOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 1000;
+    pointer-events: all;
+  }
+
+  .counterDiv {
+    position: absolute;
+    left: 50%;
+    top: 3%;
+    transform: translateX(-50%);
+    font-size: 48px;
+    color: $white-off;
+    text-align: center;
+
+    background-color: rgba(0, 0, 0, 0.7); // Dark transparent background
+    border-radius: 15px;
+
+    p {
+      margin-bottom: 0;
+      padding: 0px 26px;
+      span {
+        font-size: 64px;
+        color: $orange-bright;
+      }
+    }
+  }
+  .youWinDiv {
+    animation: fadeIn 1.5s ease-in-out forwards;
+    p {
+      span:nth-child(1) {
+        color: #ffa500;
+      }
+
+      span:nth-child(2) {
+        color: #607d8b;
+      }
+
+      span:nth-child(3) {
+        color: #008080;
+      }
+
+      span:nth-child(5) {
+        color: #006400;
+      }
+
+      span:nth-child(6) {
+        color: #ffa500;
+      }
+
+      span:nth-child(7) {
+        color: #87ceeb;
+      }
+    }
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
