--- a/memory/src/styles/globals.scss
+++ b/memory/src/styles/globals.scss
@@ -121,8 +121,7 @@ $white-off: #fcfcfc; // Off-white
   border-radius: 15px;
   position: absolute;
   box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
-  width: 100px;
-  height: 100px;
+
   cursor: pointer;
   .card-content {
     width: 100%;
@@ -180,14 +179,14 @@ $white-off: #fcfcfc; // Off-white
 #flippedCard {
   width: 170px;
   height: 170px;
-  background-color: #fff; /* White background */
+  background-color: #fff;
   border-radius: 10px;
   display: grid;
-  grid-template-columns: repeat(6, 1fr); /* 6 columns for rings */
+  grid-template-columns: repeat(6, 1fr);
   grid-gap: 5px;
   padding: 10px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); /* Adds depth */
-  border: 2px solid black; /* Thin border for styling */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+  border: 2px solid black;
   position: relative;
 
   &::before {
@@ -210,14 +209,14 @@ $white-off: #fcfcfc; // Off-white
     inset: 0;
     z-index: 1;
     border-radius: 10px;
-    pointer-events: none; /* Prevent interference with clicks */
+    pointer-events: none;
   }
 }
 
 #cardOnTop {
   position: absolute;
   left: calc(90vw - 75px);
-  top: calc(50vh - 85px);
+
   background-size: cover;
   width: 150px;
   height: 150px;
@@ -255,14 +254,13 @@ $white-off: #fcfcfc; // Off-white
     color: $white-off;
     text-align: center;
 
-    background-color: rgba(0, 0, 0, 0.7); // Dark transparent background
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 15px;
 
     p {
       margin-bottom: 0;
       padding: 0px 26px;
       span {
-        font-size: 64px;
         color: $orange-bright;
       }
     }
